# s7cmd

./: .dockerignore  .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  deny.toml  s7cmd.rc
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
docs/superpowers/plans/: 2026-04-26-s7cmd-cli.md  2026-04-28-e2e-tests.md  2026-04-30-batch-run.md  2026-05-02-batch-run-e2e-tests.md
docs/superpowers/specs/: 2026-04-26-s7cmd-cli-design.md  2026-04-28-e2e-tests-design.md  2026-04-30-batch-run-design.md  2026-05-02-batch-run-e2e-tests-design.md
src/: cli.rs  dispatch.rs  main.rs
src/batch_run/: args.rs  executor.rs  mod.rs  parser.rs  progress.rs  summary.rs  validate.rs
src/clean_bin/: ctrl_c_handler.rs  indicator.rs  mod.rs  tracing_init.rs  ui_config.rs
src/ls_bin/: ctrl_c_handler.rs  mod.rs  tracing_init.rs
src/sync_bin/: mod.rs  tracing.rs
src/sync_bin/cli/: ctrl_c_handler.rs  indicator.rs  mod.rs  ui_config.rs
src/util_bin/: mod.rs  tracing_init.rs
src/util_bin/cli/: cp.rs  create_bucket.rs  ctrl_c_handler.rs  delete_bucket.rs  delete_bucket_cors.rs  delete_bucket_encryption.rs  delete_bucket_lifecycle_configuration.rs  delete_bucket_policy.rs  delete_bucket_replication.rs  delete_bucket_tagging.rs  delete_bucket_website.rs  delete_object_tagging.rs  delete_public_access_block.rs  get_bucket_accelerate_configuration.rs  get_bucket_cors.rs  get_bucket_encryption.rs  get_bucket_lifecycle_configuration.rs  get_bucket_logging.rs  get_bucket_notification_configuration.rs  get_bucket_policy.rs  get_bucket_policy_status.rs  get_bucket_replication.rs  get_bucket_request_payment.rs  get_bucket_tagging.rs  get_bucket_versioning.rs  get_bucket_website.rs  get_object_tagging.rs  get_public_access_block.rs  head_bucket.rs  head_object.rs  indicator.rs  mod.rs  mv.rs  presign.rs  put_bucket_accelerate_configuration.rs  put_bucket_cors.rs  put_bucket_encryption.rs  put_bucket_lifecycle_configuration.rs  put_bucket_logging.rs  put_bucket_notification_configuration.rs  (+13 more)
tests/: batch_run.rs  cli_arg_validation.rs  cli_config_validation_error.rs  cli_create_bucket.rs  cli_delete_bucket.rs  cli_delete_bucket_cors.rs  cli_delete_bucket_encryption.rs  cli_delete_bucket_lifecycle_configuration.rs  cli_delete_bucket_policy.rs  cli_delete_bucket_replication.rs  cli_delete_bucket_tagging.rs  cli_delete_bucket_website.rs  cli_delete_object_tagging.rs  cli_delete_public_access_block.rs  cli_dispatch.rs  cli_dry_run.rs  cli_get_bucket_accelerate_configuration.rs  cli_get_bucket_cors.rs  cli_get_bucket_encryption.rs  cli_get_bucket_lifecycle_configuration.rs  cli_get_bucket_logging.rs  cli_get_bucket_notification_configuration.rs  cli_get_bucket_policy.rs  cli_get_bucket_policy_status.rs  cli_get_bucket_replication.rs  cli_get_bucket_request_payment.rs  cli_get_bucket_tagging.rs  cli_get_bucket_versioning.rs  cli_get_bucket_website.rs  cli_get_object_tagging.rs  cli_get_public_access_block.rs  cli_head_bucket.rs  cli_head_object.rs  cli_help.rs  cli_presign.rs  cli_put_bucket_accelerate_configuration.rs  cli_put_bucket_cors.rs  cli_put_bucket_encryption.rs  cli_put_bucket_lifecycle_configuration.rs  cli_put_bucket_logging.rs  (+41 more)
tests/common/: mod.rs
