[package]
name = "s7cmd"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Unified S3 CLI bundling s3sync and s3util-rs"
authors = ["nidor1998 <nidor1998@gmail.com>"]
repository = "https://github.com/nidor1998/s7cmd"
homepage = "https://github.com/nidor1998/s7cmd"
keywords = ["AWS", "Amazon", "S3", "cli", "sync"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# Pinned to the exact minor version to keep vendored bin code in sync.
# s3sync's `lua_support` is in its default features; Lua flags
# (--filter-callback-lua-script, etc.) automatically appear under
# `s7cmd sync --help`. Use default-features = false to opt out.
s3sync     = "1.57"
s3util-rs  = "0.2"

# Re-export the same AWS SDK minor versions both libs use so Cargo unifies
# the dep tree (otherwise you get two compiled copies and possible type
# incompatibilities at API boundaries).
aws-sdk-s3 = { version = "1.131", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-config = { version = "1.8", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-smithy-runtime-api = "1.12"
aws-smithy-types       = "1.4"

# CLI / runtime
anyhow       = "1"
clap         = { version = "4.6", features = ["derive", "env", "cargo", "string"] }
clap_complete = "4.6"
tokio        = { version = "1.52", features = ["full"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
log          = "0.4"

# Used by the vendored sync runner (callback registration / report summary).
chrono = "0.4"

[features]
default = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
debug      = 1
panic      = "unwind"
opt-level  = 3
strip      = "symbols"
lto        = "fat"
codegen-units = 1
