[package]
name = "s7cmd"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.1"
license = "Apache-2.0"
description = "Reliable, flexible, and fast command-line tool for Amazon S3"
authors = ["nidor1998 <nidor1998@gmail.com>"]
repository = "https://github.com/nidor1998/s7cmd"
homepage = "https://github.com/nidor1998/s7cmd"
keywords = ["AWS", "Amazon", "S3", "cli", "sync"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# Pinned to the exact minor version to keep vendored bin code in sync.
# s3sync's `lua_support` is in its default features; Lua flags
# (--filter-callback-lua-script, etc.) automatically appear under
# `s7cmd sync --help`. Use default-features = false to opt out.
s3sync     = "=1.58.6"
s3util-rs  = "=1.1.0"
# Vendored bin code is sourced from these versions; pin minor.
s3rm-rs    = "=1.3.6"
s3ls-rs    = "=1.0.0"

# Build-info for `s7cmd --version` (gated behind the `version` feature).
shadow-rs = { version = "2", optional = true, default-features = false }

# Re-export the same AWS SDK minor versions both libs use so Cargo unifies
# the dep tree (otherwise you get two compiled copies and possible type
# incompatibilities at API boundaries).
aws-sdk-s3 = { version = "1.131", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-config = { version = "1.8", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-smithy-runtime-api = "1.12"
aws-smithy-types       = "1.4"

# CLI / runtime
anyhow       = "1"
clap         = { version = "4.6", features = ["derive", "env", "cargo", "string", "wrap_help"] }
clap_complete = "4.6"
# Used by the new batch_run module (line tokenization).
shlex = "1"
# Used by batch_run for verbosity-driven tracing config (-v / -vv / -q / -qq).
# Already a transitive dep via s3util-rs; declare it directly so version is locked.
clap-verbosity-flag = "3"
tokio        = { version = "1.52", features = ["full"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
log          = "0.4"

# Used by the vendored sync runner (callback registration / report summary).
chrono = "0.4"

# Used by the vendored sync_bin indicator module.
async-channel         = "2"
indicatif             = "0.18"
simple_moving_average = "1"

# Used by the vendored util_bin cli module.
leaky-bucket = "1.1"
urlencoding  = "2.1"
dyn-clone    = "1.0"
serde_json   = "1"

[features]
default = ["version"]
version = ["dep:shadow-rs"]

[build-dependencies]
shadow-rs = { version = "2", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
# Used by mv.rs unit tests to implement a fake `StorageTrait` for the
# source-delete decision tree. Already a transitive dep via s3util-rs;
# declare it as a dev-dep so it's importable in `#[cfg(test)]`.
async-trait = "0.1"
# Used by e2e_dry_run.rs to parse get-public-access-block JSON output.
serde_json = "1"
# Used only by the Unix-gated e2e_ctrl_c.rs tests (SIGINT delivery).
# Pulled in unconditionally as a dev-dep so cfg(e2e_test) compiles cleanly
# everywhere; the test file itself gates on cfg(unix).
nix = { version = "0.31", default-features = false, features = ["signal"] }

[profile.release]
debug      = 1
panic      = "unwind"
opt-level  = 3
strip      = "symbols"
lto        = "fat"
codegen-units = 1

[profile.release-min-size]
inherits   = "release"
debug      = 0
panic      = "abort"
opt-level  = "z"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(e2e_test)'] }
